Modify Facebook Pixel code and background image
Updated Facebook Pixel tracking ID and background image.

--- a/index.html
+++ b/index.html
@@ -1,26 +1,37 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
+    <!-- Meta Pixel Code -->
+    <script>
+        ! function(f, b, e, v, n, t, s) {
+            if (f.fbq) return;
+            n = f.fbq = function() {
+                n.callMethod ?
+                    n.callMethod.apply(n, arguments) : n.queue.push(arguments)
+            };
+            if (!f._fbq) f._fbq = n;
+            n.push = n;
+            n.loaded = !0;
+            n.version = '2.0';
+            n.queue = [];
+            t = b.createElement(e);
+            t.async = !0;
+            t.src = v;
+            s = b.getElementsByTagName(e)[0];
+            s.parentNode.insertBefore(t, s)
+        }(window, document, 'script',
+            'https://connect.facebook.net/en_US/fbevents.js');
+        fbq('init', '682986337468852');
+        fbq('track', 'PageView');
+    </script>
+    <noscript><img height="1" width="1" style="display:none"
+src="https://www.facebook.com/tr?id=682986337468852&ev=PageView&noscript=1"
+/></noscript>
+    <!-- End Meta Pixel Code -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>James Bhai</title>
-
-    <script>
-    !function(f,b,e,v,n,t,s)
-    {if(f.fbq)return;n=f.fbq=function(){n.callMethod?
-    n.callMethod.apply(n,arguments):n.queue.push(arguments)};
-    if(!f._fbq)f._fbq=n;n.push=n;n.loaded=!0;n.version='2.0';
-    n.queue=[];t=b.createElement(e);t.async=!0;
-    t.src=v;s=b.getElementsByTagName(e)[0];
-    s.parentNode.insertBefore(t,s)}(window, document,'script',
-    'https://connect.facebook.net/en_US/fbevents.js');
-    fbq('init', '605805139260782');
-    fbq('track', 'PageView');
-    </script>
-    <noscript><img height="1" width="1" style="display:none"
-    src="https://www.facebook.com/tr?id=605805139260782&ev=PageView&noscript=1"
-    /></noscript>
-
     <style>
         * {
             margin: 0;
@@ -30,7 +41,7 @@
         }
 
         body {
-            background: url('https://raw.githubusercontent.com/onlinetipper/diamondtossline/c3d70b99c4bdfab98d190ffa4ee32d830a2825d7/daimond.jpg') no-repeat center center fixed;
+            background: url('https://raw.githubusercontent.com/onlinetipper/jamesbhai/df346b568ea67b860319d30f670116b9258f0495/bhai.jpg') no-repeat center center fixed;
             background-size: cover;
             height: 100vh;
             display: flex;
@@ -171,9 +182,6 @@
         <a href="https://t.me/AdDukan1" class="ad-setup-link">
             Ad Setup- Ad Dukan
         </a>
-
-        <p class="footer-text">99% Right Accuracy ke sath best result</p>
-    </div>
 
     <script>
         let timeLeft = 60;
