Update background image and text content in index.html

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@ src="https://www.facebook.com/tr?id=682986337468852&ev=PageView&noscript=1"
         }
 
         body {
-            background: url('https://raw.githubusercontent.com/onlinetipper/jamesbhai/df346b568ea67b860319d30f670116b9258f0495/bhai.jpg') no-repeat center center fixed;
+            background: url('https://raw.githubusercontent.com/onlinetipper/jamesbhai/b9e72d422d2780422171f896634490875158d5a3/BLACK.jpg') no-repeat center center fixed;
             background-size: cover;
             height: 100vh;
             display: flex;
@@ -161,13 +161,13 @@ src="https://www.facebook.com/tr?id=682986337468852&ev=PageView&noscript=1"
     <div class="bg-overlay"></div>
 
     <div class="container">
-        <h3 class="title">James Bhai</h3>
-        <p class="tagline">Best Cricket Expert → Tips, Calls & Live Analysis</p>
+        <h5 class="title">James Bhai (Analyst)™</h5>
+        <p class="tagline">Best Cricket Tipper → Toss, Match & Session Analysis</p>
 
         <p class="timer-text">FREE JOINING ENDS IN <span id="timer">60s</span></p>
 
         <div class="big-counter" id="big-counter">60</div>
-        <div class="sub-brand">Join Fast...</div>
+        <div class="sub-brand">Expired.</div>
 
         <div class="stats">
             <p>✔ <strong>81/87 MATCH PASSED</strong> 🏆</p>
